Rewrite to use XCB instead of Xlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 project (VKBOOTSTRAP C)
 cmake_minimum_required(VERSION 3.6.2)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 
 set(VKBOOTSTRAP_VERSION_MAJOR "0")
 set(VKBOOTSTRAP_VERSION_MINOR "1")
 set(VKBOOTSTRAP_VERSION "${VKBOOTSTRAP_VERSION_MAJOR}.${VKBOOTSTRAP_VERSION_MINOR}")
 
-option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(NINJA_MODE "Enable all warnings" ON)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
@@ -18,9 +18,9 @@ list(APPEND VKBOOTSTRAP_LIBRARIES ${Vulkan_LIBRARIES})
 
 if (UNIX AND NOT APPLE)
     add_definitions(-DHAVE_CONFIG_H)
-    find_package(X11 REQUIRED)
-    list(APPEND VKBOOTSTRAP_INCLUDE_DIRS ${X11_X11_INCLUDE_PATH})
-    list(APPEND VKBOOTSTRAP_LIBRARIES ${X11_X11_LIB})
+    find_package(XCB REQUIRED)
+    list(APPEND VKBOOTSTRAP_INCLUDE_DIRS ${XCB_INCLUDE_DIRS})
+    list(APPEND VKBOOTSTRAP_LIBRARIES ${XCB_LIBRARIES})
     list(APPEND VKBOOTSTRAP_SOURCES "src/main_x11.c")
 endif()
 if(NINJA_MODE)
