Check vulkan libs and flags using pkg-config

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(srcdir)/include $(XCB_CFLAGS)
+AM_CPPFLAGS = -I$(srcdir)/include $(XCB_CFLAGS) $(VULKAN_CFLAGS)
 bin_PROGRAMS = vkbootstrap
 vkbootstrap_SOURCES = src/main_x11.c
-vkbootstrap_LDADD = $(XCB_LIBS)
+vkbootstrap_LDADD = $(XCB_LIBS) $(VULKAN_LIBS)
